--- a/src/pages/docs/about.mdx
+++ b/src/pages/docs/about.mdx
@@ -20,7 +20,7 @@ Our organization was founded November 2023. We are supported by donations and me
 ## Our Impact
 
 From January - July 2024:
-* Sequoia Fabrica has offered more than 65 classes and meetups. We have reached over 350 attendees.
+* Sequoia Fabrica offered more than 65 classes and meetups. We reached over 350 attendees.
 * Class topics include crafts, woodworking, sewing, electronics and digital fabrication. Two thirds of classes offered involve sewing or fiber arts.
 * Our classes are affordable, $20 on average. Sequoia Fabrica also ensures that no one is turned away for lack of funds.
 * 85% of classes are designed for beginners. Workshops for children and families represent 10% of our classes.
@@ -43,7 +43,7 @@ We believe in the transformative power of access to tools and technology. Our mi
 
 ## Join Our Community
 
-Whether you're a seasoned maker, a curious beginner, or someone who believes in the power of community and creativity, there's a place for you here. We're always searching for [volunteers](https://wiki.sequoiafabrica.org/wiki/Volunteers) to help maintain the space, run classes, and be welcoming community members. 
+Whether you're a seasoned maker, a curious beginner, or someone who believes in the power of community and creativity, there's a place for you here. We're always searching for [members](./membership) and [volunteers](https://wiki.sequoiafabrica.org/wiki/Volunteers) to help maintain the space, run classes, and welcome others. 
 
 ## Still Have Questions?
 
