--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -45,15 +45,16 @@ Dremel cordless rotary tool,
 Variety of hand tools, workholding, etc.
 
 **Digital Fabrication:**
-2x Prusa MK3.9S 3d printers,
+3x Prusa 3d printers,
 XTool 55W CO2 laser,
+Nomad Desktop CNC,
 Cricut Vinyl Cutter.
 
 ## Can I have a tour?
 
 Our workshop is run by volunteers and we typically do not have the capacity to schedule one-off tours.
 
-If you'd like to see the space please [sign up for an event](https://bookwhen.com/sequoiafabrica). 
+If you'd like to see the space please [sign up for an event](https://bookwhen.com/sequoiafabrica). If you're an organization looking to partner, please [reach out to us](./contact). 
 
 ## How does membership work?
 
@@ -85,7 +86,7 @@ At this time the workshop is not setup for pets, but we hope to offer some pet f
 
 ## Can I take a class at Sequoia Fabrica if I can't afford a workshop fee?
 
-Yes, a limited number of scholarships are available for classes. Please [get in touch](./contact). 
+Yes, scholarships are available for classes. Please [fill out our form](https://docs.google.com/forms/d/e/1FAIpQLSdonL4v1x9dH1AuiRgIyt6F1elsod1s6vr-j0P11x7uMpq4pg/viewform). 
 
 ## **Are you a non-profit? 501(c)(3)?**
 
@@ -104,7 +105,7 @@ Loans are not tax-deductible, and we cannot promise the equipment will remain in
 
 ## Why did you start another space?
 
-San Francisco needs more workshops and 2023-24 is a window for opportunity for non-profits and arts organizations to find affordable space in the city. 
+San Francisco needs more workshops and 2023-24 is a window of opportunity for non-profits and arts organizations to find affordable space in the city. 
 
 Our organization seeks to offer:
 
