--- a/src/pages/docs/membership.mdx
+++ b/src/pages/docs/membership.mdx
@@ -11,18 +11,27 @@ export const metadata = {
 
 ## Join Our Community
 
-We're thrilled you're interested in joining our community of artists, creators, and makers. 
-
 As a member, you'll have 24/7 access to tools, equipment, and space to bring your projects to life. But more importantly, you'll be part of a passionate community that thrives on sharing knowledge, exchanging ideas, and working together.
 
 ## Membership Types
-- **Sponsor Membership:** Our sponsor membership is priced at **$200 per month**. Sponsors help provide scholarships for those who can not afford classes or full membership dues.
-- **Standard Membership:** Our standard membership is priced at **$150 per month**. Covers the full costs of running a community workshop in San Francisco.
-- **Sliding Scale Membership:** Membership is available on a sliding scale basis of **$100-149 per month** and is intended for any who cannot otherwise afford full dues. No pre-qualification. Choose this option if you need it!
+- <u>Sponsor Membership</u>  **$200 per month**. Sponsors help provide scholarships for those who can not afford classes or full membership dues.
+- <u>Standard Membership</u>  **$150 per month**. Covers the full costs of running a community workshop in San Francisco.
+- <u>Sliding Scale Membership</u> **$100-149 per month** and is intended for any who cannot otherwise afford full dues. Choose this option if you need it!
 
-We do not currently have the ability to self-fund lower membership rates than those above. We'd love to offer more flexible terms if we can find funding and meet our monthly expenses. 
+## Getting Started with Membership
+We've tried to make the process for membership as straightforward as possible. If you have any questions throughout the process, please [reach out to us](./contact).
 
-Sequoia Fabrica is _not_ a rental workshop. Everyone is expected to help maintain the space and help with projects or events. Our volunteer-based structure is how we are able to provide an affordable space.
+1. **Visit Us:** Get a feel for the space and meet our community. Potential members should visit us during one of our [events](./events).
+
+2. **Apply:** If you decide that Sequoia Fabrica is the right fit for you, complete our [membership application form](https://forms.gle/r3AytzzxeKX7NUaM8).
+
+3. **Sign up for an Orientation:** <a href={urlConstants.bookWhen} data-goatcounter-click={urlConstants.bookWhen}>Member applicant orientations</a> are 1st and 3rd Tuesdays at 7PM every month. If this time will not work, [get in touch](./contact).
+
+4. **Application Review** Our Board and Membership will evaluate your application. We will update you on your application status.
+
+5. **Start Paying Dues**. Membership dues are accepted through [Open Collective](https://opencollective.com/sequoia-fabrica/contribute/sponsor-68571). If this does not work for you, contact us.
+
+6. **Become a Part of the Community:** Once you're a member, you will have access to the space to use as you please as long as it doesn't go against our community rules. Start using the space, join [a grove](./faq#what_is_a_grove), help us maintain the space.
 
 ## What Membership Means
 
@@ -31,22 +40,9 @@ Sequoia Fabrica is _not_ a rental workshop. Everyone is expected to help maintai
 - **Learning Opportunities:** Members are encouraged to share skills and knowledge with each other. Through workshops, peer mentoring, Grove projects, and informal collaboration, there are always opportunities to teach and learn from one another.
 - **A Voice**: As a member, you have a say in shaping Sequoia Fabrica. You'll be able to participate in organizational meetings and decision-making. Your feedback and ideas are critical as we continue improving our community.
 
-## Getting Started with Membership
-We've tried to make the process for membership as straightforward as possible. If you have any questions throughout the process, please [reach out to us](./contact).
+Sequoia Fabrica is _not_ a rental workshop. Everyone is expected to help maintain the space and help with projects or events. Our volunteer-based structure is how we are able to provide an affordable space.
 
-<Callout variant='info'>
-  This process is still being ironed out as we develop a stable system for onboarding new members. The exact steps you follow might differ.
-</Callout>
-
-1. **Visit Us:** Get a feel for the space and meet our community. We encourage potential members to visit us during one of our [events](./events) or to volunteer with us, and then [schedule a tour](./contact).
-
-2. **Apply:** If you decide that Sequoia Fabrica is the right fit for you, complete our [membership application form](https://forms.gle/r3AytzzxeKX7NUaM8) and agree to our <a href={urlConstants.wiki+"/Workshop_Norms"}>community guidelines</a> as well as our [code of conduct](./code_of_conduct).
-
-3. **Sign up for an Orientation:** All new members go through an orientation session to become familiar with the groves, safety protocols, and community norms of Sequoia Fabrica. <a href={urlConstants.bookWhen} data-goatcounter-click={urlConstants.bookWhen}>Member applicant orientations</a> are 1st and 3rd Tuesdays at 7PM every month. To respect the time our members volunteer, we ask you try to make this time work. If there is no way you can attend this time, contact us about scheduling at a different time. This orientation does not equip you with training for how to use specific tools, rather it is an overview of the space, what we offer, and our operating policies.
-
-4. **Start Paying Dues** if applicable. Membership dues are accepted through [Open Collective](https://opencollective.com/sequoia-fabrica/contribute/sponsor-68571). If this does not work for you, contact us.
-
-5. **Become a Part of the Community:** Once you're a member, you will have access to the space to use as you please as long as it doesn't go against our community rules. Start using the space, join [a grove](./faq#what_is_a_grove), attend and help out with workshops, and be a part of our collaborative environment. Members are encouraged to host events and collaborate with the community. They are expected to help maintain the space.
+We do not currently have the ability to self-fund lower membership rates than those listed above. We'd love to offer more flexible terms if we can find funding and meet our monthly expenses.
 
 ## Still have Questions?
 Check our [FAQ page](./faq) for answers. If you don't find what you are looking for, please [reach out to us](./contact).
