--- a/src/pages/docs/partner.mdx
+++ b/src/pages/docs/partner.mdx
@@ -11,15 +11,15 @@ Reach out to us at <a href={urlConstants.mailto}>sequoiafabrica@gmail.com</a> an
 
 ## Community Collaboration
 
-We love to partner with other organizations to offer unique programs and outreach initiatives, making our arts, crafts, technology resources and expertise accessible to a wider audience. Whether you're a non-profit, educational institution, or community group, let's explore how we can work together.
+We've worked with schools, governments, and nonprofit agencies to make arts, crafts, technology workshops and expertise accessible to a wider audience. Let's explore how we can work together.
 
 ## Build a Stronger Team
 
-Looking for a unique and engaging team-building experience? We offer a variety of activities that utilize the power of hands-on learning and collaboration, perfect for boosting communication, problem-solving, and team spirit. Let's create a custom program that fits your team's needs.
+Looking for a unique and engaging team-building experience? We offer a variety of activities that utilize the power of hands-on learning and collaboration. These are for boosting communication, problem-solving, and team spirit. Let's create a custom program that fits your team's needs.
 
 ## Host Your Event
 
-Our intimate space is perfect for hosting a variety of events, from workshops and meetings to community gatherings. We offer flexible rental options and can accommodate your needs.
+Our intimate space is perfect for hosting a variety of events, from workshops and meetings to community gatherings. We offer flexible rental options that can accommodate your needs.
 
 export default function MDXPage({ children }) {
   return <DocumentLayout metadata={metadata}>{children}</DocumentLayout>;
