--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -107,7 +107,7 @@ Loans are not tax-deductible, and we cannot promise the equipment will remain in
 
 San Francisco needs more workshops and 2023-24 is a window of opportunity for non-profits and arts organizations to find affordable space in the city. 
 
-Our organization seeks to offer:
+Our organization offers:
 
 * High quality tools and infrastructure for local artists, makers, and creators
 * A clean and safe environment where members and visitors can focus on projects
