--- a/src/pages/docs/code_of_conduct.mdx
+++ b/src/pages/docs/code_of_conduct.mdx
@@ -7,17 +7,13 @@ export const metadata = {
 
 # Code of Conduct
 
-This code of conduct applies to all events and spaces sponsored by Sequoia Fabrica (SF), including our physical locations, website, mailing lists, social media, and chat. 
-
-Sequoia Fabrica is a space for tolerance and respect. We value robust discussion and encourage participants to engage with complex, challenging topics. We also ask members and visitors to be mindful of their words and actions and how they may affect others, including being open to feedback.
-
-We ask you to be aware that conversations or actions that may be appropriate within the context of a specific friendship or relationship with another member may be inappropriate in the Sequoia Fabrica space or in a group conversation with SF members or visitors you don't know well.
+Sequoia Fabrica is a space for tolerance and respect. We ask members and visitors to consider how their words and actions may affect others (including people you don't know well) in a shared workspace.
 
 ## Harassment
 
-The Sequoia Fabrica (SF) community is dedicated to providing a harassment-free experience for everyone. We do not tolerate harassment of participants in any form, including:
+Sequoia Fabrica (SF) is dedicated to providing a harassment-free experience for everyone. Harassment can include:
 
-- Offensive comments related to gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, religion, etc.
+- Offensive comments related to a person's gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, religion, etc.
 - Intimidation, stalking, following
 - Disrupting events
 - Threats of violence
@@ -29,28 +25,21 @@ The Sequoia Fabrica (SF) community is dedicated to providing a harassment-free e
 - Harassing photography or recording, including logging online activity for harassment purposes
 - Spamming, denial of service attacks, hacking of personal devices or accounts without consent
 
-### Sequoia Fabrica will not act on complaints regarding:
+## Workshop Policies
 
-- Reasonable communication of personal boundaries
-- Necessary measures to protect our community from serious, deliberate harm
+* Follow all safety procedures, use tools and materials only as instructed by maintainers
+* Report dangerous behavior, unsafe conditions, broken equipment, and other incidents promptly
+* Keep the workspace clean 
 
 ## Reporting & Enforcement
 
-Participants asked to stop any harassing behavior are expected to comply immediately.
+All members and visitors can ask anyone violating this code of conduct or making others feel unwelcome to cease and/or leave the space. Participants asked to stop any harassing or dangerous behavior must comply immediately.
 
-All members and visitors are empowered to ask anyone violating this code of conduct or making others feel unwelcome to cease and/or leave the space. Further sanctions may be applied at the discretion of the Board.
+The Board can investigate and take further action if they deem it appropriate, including warning, loss of privileges, suspension of membership, temporary or permanent expulsion from Sequoia Fabrica spaces and events without refund or notice. 
 
-The Board may take any action they deem appropriate, including warning an offender, suspension of membership, temporary or permanent expulsion from Sequoia Fabrica spaces and events without refund or notice. 
+Contact the Board with any questions or concerns in person, by text or voicemail at (415) 935-0478, or by email at [info@sequoiafabrica.org](mailto:info@sequoiafabrica.org).
 
-Contact the Board with any questions or concerns in person or at [sequoiafabrica@gmail.com](mailto:sequoiafabrica@gmail.com).
-
-## Workshop Policies
-
-* Follow all safety procedures, use tools and materials as instructed by maintainers
-* Report unsafe conditions, broken equipment, and other incidents promptly
-* Keep the workspace clean and orderly 
-
-Last updated: Jul 11, 2024
+Last updated: Oct 20, 2024
 
 export default function MDXPage({ children }) {
   return <DocumentLayout metadata={metadata}>{children}</DocumentLayout>;
