--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -56,6 +56,12 @@ Our workshop is run by volunteers and we typically do not have the capacity to s
 
 If you'd like to see the space please [sign up for an event](https://bookwhen.com/sequoiafabrica). If you're an organization looking to partner, please [reach out to us](./contact). 
 
+## When will you have a class on X?
+
+Instructors are volunteers, so classes vary by month and are added weekly! 
+
+If a class is sold out, join the waiting list. This helps us gauge demand, we'll reach out if we add a new session.
+
 ## How does membership work?
 
 All prospective members should visit our space, complete an application, and sign up for an orientation. The Board and membership evaluate all applications. If approved, you will be asked to pay dues and receive a key. Members get access to our Slack and can participate in Sequoia Fabrica meetings.
