FAQ and Membership updates

--- a/src/pages/docs/membership.mdx
+++ b/src/pages/docs/membership.mdx
@@ -42,6 +42,8 @@ We've tried to make the process for membership as straightforward as possible. I
 
 Sequoia Fabrica is _not_ a rental workshop. Everyone is expected to help maintain the space and help with projects or events. Our volunteer-based structure is how we are able to provide an affordable space.
 
+You must be 18 years of age or older to be a member. Members can bring family members or friends as their guests if working on a project together.
+
 We do not currently have the ability to self-fund lower membership rates than those listed above. We'd love to offer more flexible terms if we can find funding and meet our monthly expenses.
 
 ## Still have Questions?
