--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -62,13 +62,17 @@ Instructors are volunteers, so classes vary by month and are added weekly!
 
 If a class is sold out, join the waiting list. This helps us gauge demand, we'll reach out if we add a new session.
 
+If you want to volunteer to teach a class, [email us](./contact).
+
 ## How does membership work?
 
 All prospective members should visit our space, complete an application, and sign up for an orientation. The Board and membership evaluate all applications. If approved, you will be asked to pay dues and receive a key. Members get access to our Slack and can participate in Sequoia Fabrica meetings.
 
 Members are responsible for contributing to the upkeep of our shared space. Hosting classes is encouraged, you don’t need to be a subject matter expert!
 
-Please review our [membership page](./membership) for more information!
+Please review our [membership page](./membership) for more information! 
+
+You must be 18 years of age or older to become a member. Members may bring a family member or friend as their guest. 
 
 ## How much does membership cost?
 
@@ -83,6 +87,10 @@ Sequoia Fabrica also has a [volunteer program](https://wiki.sequoiafabrica.org/w
 Children are welcome under supervision of a parent or guardian. 
 
 We offer some events and classes specifically for families. 
+
+Parents who are members can bring their child and work on projects together.
+
+Be aware that Sequoia Fabrica is an active workshop. In this environment you may encounter dust, loud noises, and bright lights.
 
 Read more about our policies and resources for children [on our wiki](https://wiki.sequoiafabrica.org/wiki/Saplings).
 
