Clarification about children and membership

--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -72,7 +72,7 @@ Members are responsible for contributing to the upkeep of our shared space. Host
 
 Please review our [membership page](./membership) for more information! 
 
-You must be 18 years of age or older to become a member. Members may bring a family member or friend as their guest. 
+You must be 18 years of age or older to become a member. Members may bring family members or friends as their guests. 
 
 ## How much does membership cost?
 
@@ -88,9 +88,9 @@ Children are welcome under supervision of a parent or guardian.
 
 We offer some events and classes specifically for families. 
 
-Parents who are members can bring their child and work on projects together.
+Parents who are members are welcome to work on projects with their children and bring them to the workshop. Children can not be members or visit the workshop by themselves.
 
-Be aware that Sequoia Fabrica is an active workshop. In this environment you may encounter dust, loud noises, and bright lights.
+Be aware that in a workshop environment you may encounter dust, loud noises, and bright lights.
 
 Read more about our policies and resources for children [on our wiki](https://wiki.sequoiafabrica.org/wiki/Saplings).
 
