minor content updates

--- a/src/pages/docs/about.mdx
+++ b/src/pages/docs/about.mdx
@@ -7,29 +7,29 @@ export const metadata = {
 
 # About Sequoia Fabrica
 
-Welcome to Sequoia Fabrica, a 501(c)(3) non-profit, community workshop and makerspace in San Francisco.
+Welcome to Sequoia Fabrica, a 501(c)(3) non-profit, intergenerational community workshop and makerspace in San Francisco.
 
-Our organization was founded November 2023. We are supported by donations and memberships. Most of our equipment is second-hand or donated. We are run by 100% volunteer labor.
+Our organization was founded November 2023 and opened our doors in March 2024. We are supported by donations and memberships. Most of our equipment is second-hand or donated. We are run by 100% volunteer labor.
 
 ## What We Offer 
 
 * Weekly [classes and events](./events), open to the public, on subjects including arts, crafts, technology, and tools. 
 * Affordable [memberships](./membership), access to equipment and infrastructure for learning, arts, prototyping and creative projects.
+* Community partnerships with groups including schools, museums, libraries, and nonprofits.
 * Physical space for exhibitions, meetups, community and educational events.
 
 ## Our Impact
 
-From January - July 2024:
-* Sequoia Fabrica offered more than 65 classes and meetups. We reached over 350 attendees.
+* Sequoia Fabrica has offered dozens of classes and meetups, reaching over 700 attendees.
 * Class topics include crafts, woodworking, sewing, electronics and digital fabrication. Two thirds of classes offered involve sewing or fiber arts.
-* Our classes are affordable, $20 on average. Sequoia Fabrica also ensures that no one is turned away for lack of funds.
+* Our classes are affordable, $20 on average. Sequoia Fabrica offers scholarships to ensure that no one is turned away for lack of funds.
 * 85% of classes are designed for beginners. Workshops for children and families represent 10% of our classes.
-* Sequoia Fabrica partnered with local governments to teach 6 free, off-site workshops in San Francisco and San Mateo counties.
-* The workshop hosts, on average, two free meetups monthly.
+
+See more detail [about out impact](https://wiki.sequoiafabrica.org/wiki/Impact).
 
 ## Who We Are
 
-As of July 2024, our community is around twenty five members and volunteers. Together we teach classes, take care of administrative tasks, maintain our machines and facility. 
+As of July 2025, our community is around thirty members and volunteers. Together we teach classes, take care of administrative tasks, maintain our machines and facility. 
 
 Our members include designers, educators, engineers, public servants, service workers, caregivers, and working artists. 
 
