--- a/src/pages/docs/code_of_conduct.mdx
+++ b/src/pages/docs/code_of_conduct.mdx
@@ -7,13 +7,15 @@ export const metadata = {
 
 # Code of Conduct
 
-Sequoia Fabrica is a space for tolerance and respect. We ask members and visitors to consider how their words and actions may affect others (including people you don't know well) in a shared workspace.
+Sequoia Fabrica is a place for tolerance and respect. We are committed to providing a welcoming environment where members and visitors can focus on learning and their projects.
+
+We ask all participants to consider how their words and actions may affect others (including people you don't know well) in a shared workspace.
 
 ## Harassment
 
 Sequoia Fabrica (SF) is dedicated to providing a harassment-free experience for everyone. Harassment can include:
 
-- Offensive comments related to a person's gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, religion, etc.
+- Offensive comments related to a person's race, religion, color, national origin, ancestry, disability, medical condition, genetic information, marital or family status, sex, gender, gender identity, gender expression, age, sexual orientation, reproductive health decisionmaking, veteran or military status, etc 
 - Intimidation, stalking, following
 - Disrupting events
 - Threats of violence
@@ -39,7 +41,7 @@ The Board can investigate and take further action if they deem it appropriate, i
 
 Contact the Board with any questions or concerns in person, by text or voicemail at (415) 935-0478, or by email at [info@sequoiafabrica.org](mailto:info@sequoiafabrica.org).
 
-Last updated: Oct 20, 2024
+Last updated: July 6, 2025
 
 export default function MDXPage({ children }) {
   return <DocumentLayout metadata={metadata}>{children}</DocumentLayout>;
