--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -52,9 +52,11 @@ Cricut Vinyl Cutter.
 
 ## Can I have a tour?
 
-Our workshop is run by volunteers and we typically do not have the capacity to schedule one-off tours.
+Our workshop is run by volunteers and we do not yet have the capacity to schedule one-off tours.
 
-If you'd like to see the space please [sign up for an event](https://bookwhen.com/sequoiafabrica). If you're an organization looking to partner, please [reach out to us](./contact). 
+To see the space, we recommend [signing up for an event](https://bookwhen.com/sequoiafabrica). 
+
+If you're an organization looking to partner, or representing a school class or visiting delegation, please [reach out to us](./contact). 
 
 ## When will you have a class on X?
 
@@ -62,11 +64,11 @@ Instructors are volunteers, so classes vary by month and are added weekly!
 
 If a class is sold out, join the waiting list. This helps us gauge demand, we'll reach out if we add a new session.
 
-If you want to volunteer to teach a class, [email us](./contact).
+If you want to volunteer to teach a class or have class suggestions, [email us](./contact).
 
 ## How does membership work?
 
-All prospective members should visit our space, complete an application, and sign up for an orientation. The Board and membership evaluate all applications. If approved, you will be asked to pay dues and receive a key. Members get access to our Slack and can participate in Sequoia Fabrica meetings.
+All prospective members should visit our space, complete an application, and sign up for an orientation. You will be asked to pay dues and receive a door code. Members get access to our Slack and can participate in Sequoia Fabrica meetings.
 
 Members are responsible for contributing to the upkeep of our shared space. Hosting classes is encouraged, you don’t need to be a subject matter expert!
 
@@ -76,7 +78,7 @@ You must be 18 years of age or older to become a member. Members may bring famil
 
 ## How much does membership cost?
 
-Monthly dues are similar to other Bay Area workshops, $100-150 a month.
+Our monthly dues are $100-150 a month. This is similar to other Bay Area workshops.
 
 We would like to offer more flexible dues in the future, provided we can find a funding source and meet all expenses. 
 
@@ -90,10 +92,6 @@ We offer some events and classes specifically for families.
 
 Parents who are members are welcome to work on projects with their children and bring them to the workshop. Children can not be members or visit the workshop by themselves.
 
-Be aware that in a workshop environment you may encounter dust, loud noises, and bright lights.
-
-Read more about our policies and resources for children [on our wiki](https://wiki.sequoiafabrica.org/wiki/Saplings).
-
 ## Can I bring my pet?
 
 At this time the workshop is not setup for pets, but we hope to offer some pet focused crafts and workshops in the future!
@@ -106,7 +104,7 @@ Yes, scholarships are available for classes. Please [fill out our form](https://
 
 Yes. Sequoia Fabrica is a California Public Benefit Corporation and the IRS has determined it is a public charity under IRC Section 501(c)(3). Donations are tax-deductable for federal purposes to the extent allowed by law.
 
-You can [view the final determination letter here](https://static.miraheze.org/sequoiafabricawiki/8/86/FinalLetter_93-4496044_SEQUOIAFABRICA_01132024_00.pdf).  
+You can [view the final determination letter here](https://static.miraheze.org/sequoiafabricawiki/8/86/FinalLetter_93-4496044_SEQUOIAFABRICA_01132024_00.pdf) and [find more documents on our wiki](https://wiki.sequoiafabrica.org/wiki/Main_Page).
 
 EIN: 93-4496044
 
@@ -114,19 +112,20 @@ EIN: 93-4496044
 
 With prior arrangement. Please email us at [sequoiafabrica@gmail.com](mailto:sequoiafabrica@gmail.com) with what you'd like to donate. Sequoia Fabrica maintains a [list](https://wiki.sequoiafabrica.org/wiki/Equipment_Needs) of equipment we are looking for! We can provide a receipt for your in-kind donation upon request. 
 
-If you have something you'd like to loan long-term to Sequoia Fabrica, we've [got a form](https://docs.google.com/forms/d/e/1FAIpQLSfkrRbrPWCJe-pVXQRyJ7k1nDh0zrLgVVYZIwJPtpxaV6SVlg/viewform?usp=sf_link) for that!
-Loans are not tax-deductible, and we cannot promise the equipment will remain in the state it was when you loaned it.
-
 ## Why did you start another space?
 
-San Francisco needs more workshops and 2023-24 is a window of opportunity for non-profits and arts organizations to find affordable space in the city. 
+We saw an unmet need for a community serving makerspace and 2024 offered an opportunity to find affordable rental space in San Francisco.
 
-Our organization offers:
+Sequoia Fabrica provides:
 
-* High quality tools and infrastructure for local artists, makers, and creators
-* A clean and safe environment where members and visitors can focus on projects
-* Robust public program of workshops, trainings, and community partnerships
-* Culture that encourages teaching and learning
+* Workshops and trainings open to the general public
+* Community partnerships with education and cultural institutions
+* High quality tools and infrastructure for artists, makers, and creators
+
+Our organization includes:
+
+* A clean and safe environment where members and visitors can focus on projects, teaching and learning
+* Intergenerational content for youth, adults, and elders
 * Straight-forward governance and financial stability
 
 ## Why did you choose the name Sequoia Fabrica?
