--- a/src/pages/docs/membership.mdx
+++ b/src/pages/docs/membership.mdx
@@ -27,11 +27,11 @@ We've tried to make the process for membership as straightforward as possible. I
 
 3. **Sign up for an Orientation:** <a href={urlConstants.bookWhen} data-goatcounter-click={urlConstants.bookWhen}>Member applicant orientations</a> are 1st and 3rd Tuesdays at 7PM every month. If this time will not work, [get in touch](./contact).
 
-4. **Application Review** Our Board and Membership will evaluate your application. We will update you on your application status.
+4. **Application Review** Our Board and Members review new applications as they are received. We will reach out with next steps and any questions. 
 
 5. **Start Paying Dues**. Membership dues are accepted through [Open Collective](https://opencollective.com/sequoia-fabrica/contribute/sponsor-68571). If this does not work for you, contact us.
 
-6. **Become a Part of the Community:** Once you're a member, you will have access to the space to use as you please as long as it doesn't go against our community rules. Start using the space, join [a grove](./faq#what_is_a_grove), help us maintain the space.
+6. **Become a Part of the Community:** Once you're a member, you will be provided a key code, have access to the space to use as you please as long as it doesn't go against our community rules. Start using the space, join [a grove](./faq#what_is_a_grove), help us maintain our workshop.
 
 ## What Membership Means
 
