--- a/src/pages/docs/partner.mdx
+++ b/src/pages/docs/partner.mdx
@@ -7,11 +7,11 @@ export const metadata = {
 
 # Partner With Us
 
-Reach out to us at <a href={urlConstants.mailto}>sequoiafabrica@gmail.com</a> and let's discuss how we can make something amazing together!
+Reach out to us at <a href={urlConstants.mailto}>info@sequoiafabrica.org</a> and let's discuss how we can make something amazing together!
 
 ## Community Collaboration
 
-We've worked with schools, governments, and nonprofit agencies to make arts, crafts, technology workshops and expertise accessible to a wider audience. Let's explore how we can work together.
+We work with schools, libraries, museums, and nonprofit agencies to make arts, crafts, technology workshops and expertise accessible to a wider audience. Let's explore how we can work together.
 
 ## Build a Stronger Team
 
