--- a/src/pages/docs/code_of_conduct.mdx
+++ b/src/pages/docs/code_of_conduct.mdx
@@ -11,11 +11,13 @@ Sequoia Fabrica is a place for tolerance and respect. We are committed to provid
 
 We ask all participants to consider how their words and actions may affect others (including people you don't know well) in a shared workspace.
 
+Sequoia Fabrica does not tolerate discrimination on the basis of race, religion (creed), color, national origin, ancestry, disability, medical condition, genetic information, marital or family status, sex, gender, gender identity, gender expression, age, sexual orientation, reproductive health decisionmaking, veteran or military status, etc. 
+
 ## Harassment
 
 Sequoia Fabrica (SF) is dedicated to providing a harassment-free experience for everyone. Harassment can include:
 
-- Offensive comments related to a person's race, religion, color, national origin, ancestry, disability, medical condition, genetic information, marital or family status, sex, gender, gender identity, gender expression, age, sexual orientation, reproductive health decisionmaking, veteran or military status, etc 
+- Offensive comments
 - Intimidation, stalking, following
 - Disrupting events
 - Threats of violence
