--- a/src/pages/docs/code_of_conduct.mdx
+++ b/src/pages/docs/code_of_conduct.mdx
@@ -11,8 +11,6 @@ Sequoia Fabrica is a place for tolerance and respect. We are committed to provid
 
 We ask all participants to consider how their words and actions may affect others (including people you don't know well) in a shared workspace.
 
-Sequoia Fabrica does not tolerate discrimination on the basis of race, religion (creed), color, national origin, ancestry, disability, medical condition, genetic information, marital or family status, sex, gender, gender identity, gender expression, age, sexual orientation, reproductive health decisionmaking, veteran or military status, etc. 
-
 ## Harassment
 
 Sequoia Fabrica (SF) is dedicated to providing a harassment-free experience for everyone. Harassment can include:
@@ -28,6 +26,10 @@ Sequoia Fabrica (SF) is dedicated to providing a harassment-free experience for 
 - Doxxing, maliciously revealing private information without consent
 - Harassing photography or recording, including logging online activity for harassment purposes
 - Spamming, denial of service attacks, hacking of personal devices or accounts without consent
+
+## Non-Discrimination
+
+Sequoia Fabrica does not tolerate discrimination on the basis of race, religion (creed), color, national origin, ancestry, disability, medical condition, genetic information, marital or family status, sex, gender, gender identity, gender expression, age, sexual orientation, reproductive health decisionmaking, veteran or military status, etc. 
 
 ## Workshop Policies
 
