--- a/src/pages/docs/donate.mdx
+++ b/src/pages/docs/donate.mdx
@@ -82,7 +82,7 @@ Corporate matching programs are a powerful way to maximize support and double yo
 
 Search for "Sequoia Fabrica" in your company's giving portal or find us by our EIN, 93-4496044.
 
-If you need assistance with the matching process or have questions about our nonprofit status, please [contact us](/docs/contact).
+If you need assistance with the matching process or have questions about our organization, please [contact us](/docs/contact).
 
 ## Give Through a Donor Advised Fund
 
