Added page about teaching a class.

--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -64,7 +64,7 @@ Instructors are volunteers, so classes vary by month and are added weekly!
 
 If a class is sold out, join the waiting list. This helps us gauge demand, we'll reach out if we add a new session.
 
-If you want to volunteer to teach a class or have class suggestions, [email us](./contact).
+If you want to volunteer to [teach a class](/docs/teach) or have class suggestions, [email us](./contact).
 
 ## How does membership work?
 
