--- a/src/pages/docs/partner.mdx
+++ b/src/pages/docs/partner.mdx
@@ -13,7 +13,11 @@ Reach out to us at <a href={urlConstants.mailto}>info@sequoiafabrica.org</a> and
 
 We work with schools, libraries, museums, and nonprofit agencies to make arts, crafts, technology workshops and expertise accessible to a wider audience. Let's explore how we can work together.
 
-## Build a Stronger Team
+## Teach A Class
+
+We're always looking for new volunteer instructors! [Learn about teaching at Sequoia Fabrica](/docs/teach).
+
+## Build A Stronger Team
 
 Looking for a unique and engaging team-building experience? We offer a variety of activities that utilize the power of hands-on learning and collaboration. These are for boosting communication, problem-solving, and team spirit. Let's create a custom program that fits your team's needs.
 
