--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -26,29 +26,7 @@ If this model does not meet your needs, there are many [makerspaces in the Bay A
 
 ## What tools do you have?
 
-Tools are regularly changing. For a full list, [see our wiki](https://wiki.sequoiafabrica.org/wiki/Main_Page).
-Below is an abridged list of some tools.
-
-**Textiles:**
-Domestic sewing machines,
-Embroidery machine,
-Knitting machines,
-Industrial serger,
-Industrial straight stitch sewing machine,
-Industrial walking foot sewing machine,
-Screenprinting Supplies.
-
-**Woodworking:**
-Makita cordless track saw,
-DeWalt cordless power tools,
-Dremel cordless rotary tool,
-Variety of hand tools, workholding, etc.
-
-**Digital Fabrication:**
-3x Prusa 3d printers,
-XTool 55W CO2 laser,
-Nomad Desktop CNC,
-Cricut Vinyl Cutter.
+[Find a list of tools here](/docs/tools).
 
 ## Can I have a tour?
 
@@ -130,7 +108,7 @@ Our organization includes:
 
 ## Why did you choose the name Sequoia Fabrica?
 
-Sequoia refers to the iconic California redwood tree. These trees grow from a tiny seed and are among the largest and oldest living organisms on Earth. We hope from our modest beginnings to create a community that lasts and thrives.  
+Sequoia refers to the iconic California redwood tree. These trees grow from a tiny seed and are among the largest and oldest living organisms on Earth. We hope from our modest beginnings to create a community that lasts and thrives. 
 
 Fabrica comes from the Latin word meaning workshop or factory. It also evokes fabric, fibers woven together to form a whole. Our workshop is a place where people come together across disciplines to build, learn, create, and make things with hands and machines. 
 
