--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -26,7 +26,9 @@ If this model does not meet your needs, there are many [makerspaces in the Bay A
 
 ## What tools do you have?
 
-[Find a list of tools here](/docs/tools).
+Our makerspace has a variety of sewing and knitting machines, a floor loom, soldering irons, power and hand tools for woodworking, 3d printers, laser cutters, a risograph, and more.
+
+[Find a detailed list of tools here](/docs/tools).
 
 ## Can I have a tour?
 
