replace @gmail.com email with Sequoia Fabrica's domain email

--- a/src/pages/docs/contact.mdx
+++ b/src/pages/docs/contact.mdx
@@ -8,7 +8,7 @@ export const metadata = {
 
 # Contacting Us
 
-Sequoia Fabrica run by members and volunteers. If you need to contact the board of directors, you can send an email to <a href={urlConstants.mailto}>sequoiafabrica@gmail.com</a>
+Sequoia Fabrica run by members and volunteers. If you need to contact the board of directors, you can send an email to <a href={urlConstants.mailto}>{urlConstants.email}</a>
 
 ## Join our Newsletter
 
