--- a/src/pages/docs/faq.mdx
+++ b/src/pages/docs/faq.mdx
@@ -1,4 +1,5 @@
 import DocumentLayout from '@/src/components/docs/DocumentLayout'
+import { urlConstants } from '@/src/text/urlConstants';
 export const metadata = {
   title: "Frequently Asked Questions",
   description: "Frequently asked questions about Sequoia Fabrica Makerspace."
@@ -8,7 +9,7 @@ export const metadata = {
 
 ## Where are you located?
 
-Sequoia Fabrica is located at 1736 18th Street in San Francisco’s Potrero Hill neighborhood. 
+Sequoia Fabrica is located at 1736 18th Street in San Francisco’s Potrero Hill neighborhood.
 
 Our workshop is near several major bus lines (19, 22, 55), a bike lane (on 17th Street), and there is street parking in the neighborhood.
 
@@ -19,7 +20,7 @@ Find us on [OpenStreetMap](https://www.openstreetmap.org/node/11571985859) or [G
 ## How can I access the space?
 
 The makerspace is open to the general public for regular, hosted [events and workshops](https://bookwhen.com/sequoiafabrica). Anyone is welcome to sign up and attend these! RSVP is required, unless stated.
- 
+
 If you’d like access to the facility or to use equipment at other times, you must [become a member](./membership) or [volunteer](https://wiki.sequoiafabrica.org/wiki/Volunteers)!
 
 If this model does not meet your needs, there are many [makerspaces in the Bay Area](https://makernexuswiki.com/wiki/Maker_Spaces_In_San_Francisco_area) and [around the world](https://wiki.hackerspaces.org/List_of_Hacker_Spaces).
@@ -34,13 +35,13 @@ Our makerspace has a variety of sewing and knitting machines, a floor loom, sold
 
 Our workshop is run by volunteers and we do not yet have the capacity to schedule one-off tours.
 
-To see the space, we recommend [signing up for an event](https://bookwhen.com/sequoiafabrica). 
+To see the space, we recommend [signing up for an event](https://bookwhen.com/sequoiafabrica).
 
-If you're an organization looking to partner, or representing a school class or visiting delegation, please [reach out to us](./contact). 
+If you're an organization looking to partner, or representing a school class or visiting delegation, please [reach out to us](./contact).
 
 ## When will you have a class on X?
 
-Instructors are volunteers, so classes vary by month and are added weekly! 
+Instructors are volunteers, so classes vary by month and are added weekly!
 
 If a class is sold out, join the waiting list. This helps us gauge demand, we'll reach out if we add a new session.
 
@@ -52,23 +53,23 @@ All prospective members should visit our space, complete an application, and sig
 
 Members are responsible for contributing to the upkeep of our shared space. Hosting classes is encouraged, you don’t need to be a subject matter expert!
 
-Please review our [membership page](./membership) for more information! 
+Please review our [membership page](./membership) for more information!
 
-You must be 18 years of age or older to become a member. Members may bring family members or friends as their guests. 
+You must be 18 years of age or older to become a member. Members may bring family members or friends as their guests.
 
 ## How much does membership cost?
 
 Our monthly dues are $100-150 a month. This is similar to other Bay Area workshops.
 
-We would like to offer more flexible dues in the future, provided we can find a funding source and meet all expenses. 
+We would like to offer more flexible dues in the future, provided we can find a funding source and meet all expenses.
 
 Sequoia Fabrica also has a [volunteer program](https://wiki.sequoiafabrica.org/wiki/Volunteers).
 
 ## Can I bring my kids?
 
-Children are welcome under supervision of a parent or guardian. 
+Children are welcome under supervision of a parent or guardian.
 
-We offer some events and classes specifically for families. 
+We offer some events and classes specifically for families.
 
 Parents who are members are welcome to work on projects with their children and bring them to the workshop. Children can not be members or visit the workshop by themselves.
 
@@ -78,7 +79,7 @@ At this time the workshop is not setup for pets, but we hope to offer some pet f
 
 ## Can I take a class at Sequoia Fabrica if I can't afford a workshop fee?
 
-Yes, scholarships are available for classes. Please [fill out our form](https://docs.google.com/forms/d/e/1FAIpQLSdonL4v1x9dH1AuiRgIyt6F1elsod1s6vr-j0P11x7uMpq4pg/viewform). 
+Yes, scholarships are available for classes. Please [fill out our form](https://docs.google.com/forms/d/e/1FAIpQLSdonL4v1x9dH1AuiRgIyt6F1elsod1s6vr-j0P11x7uMpq4pg/viewform).
 
 ## **Are you a non-profit? 501(c)(3)?**
 
@@ -90,7 +91,7 @@ EIN: 93-4496044
 
 ## Do you accept in kind donations?
 
-With prior arrangement. Please email us at [sequoiafabrica@gmail.com](mailto:sequoiafabrica@gmail.com) with what you'd like to donate. Sequoia Fabrica maintains a [list](https://wiki.sequoiafabrica.org/wiki/Equipment_Needs) of equipment we are looking for! We can provide a receipt for your in-kind donation upon request. 
+With prior arrangement. Please email us at <a href={urlConstants.mailto}>{urlConstants.email}</a> with what you'd like to donate. Sequoia Fabrica maintains a [list](https://wiki.sequoiafabrica.org/wiki/Equipment_Needs) of equipment we are looking for! We can provide a receipt for your in-kind donation upon request.
 
 ## Why did you start another space?
 
@@ -110,15 +111,15 @@ Our organization includes:
 
 ## Why did you choose the name Sequoia Fabrica?
 
-Sequoia refers to the iconic California redwood tree. These trees grow from a tiny seed and are among the largest and oldest living organisms on Earth. We hope from our modest beginnings to create a community that lasts and thrives. 
+Sequoia refers to the iconic California redwood tree. These trees grow from a tiny seed and are among the largest and oldest living organisms on Earth. We hope from our modest beginnings to create a community that lasts and thrives.
 
-Fabrica comes from the Latin word meaning workshop or factory. It also evokes fabric, fibers woven together to form a whole. Our workshop is a place where people come together across disciplines to build, learn, create, and make things with hands and machines. 
+Fabrica comes from the Latin word meaning workshop or factory. It also evokes fabric, fibers woven together to form a whole. Our workshop is a place where people come together across disciplines to build, learn, create, and make things with hands and machines.
 
 Conveniently, our initials are S.F.
 
 ## What is a Grove?
 
-A [Grove](https://wiki.sequoiafabrica.org/wiki/Grove) is the term we use to describe smaller interest groups of maintainers and organizers within Sequoia Fabrica. Individuals will join a Grove that relates to their interests and the tools they use, such as electronics, sewing, or woodcraft. If it does not yet exist, they can lobby the community to start a new Grove. 
+A [Grove](https://wiki.sequoiafabrica.org/wiki/Grove) is the term we use to describe smaller interest groups of maintainers and organizers within Sequoia Fabrica. Individuals will join a Grove that relates to their interests and the tools they use, such as electronics, sewing, or woodcraft. If it does not yet exist, they can lobby the community to start a new Grove.
 
 
 export default function MDXPage({ children }) {
