Update membership dues strategy

--- a/src/pages/docs/membership.mdx
+++ b/src/pages/docs/membership.mdx
@@ -16,7 +16,7 @@ As a member, you'll have 24/7 access to tools, equipment, and space to bring you
 ## Membership Types
 - <u>Sponsor Membership</u>  **$200 per month**. Sponsors help provide scholarships for those who can not afford classes or full membership dues.
 - <u>Standard Membership</u>  **$150 per month**. Covers the full costs of running a community workshop in San Francisco.
-- <u>Sliding Scale Membership</u> **$100-149 per month** and is intended for any who cannot otherwise afford full dues. Choose this option if you need it!
+- <u>Discounted Membership</u> **$100 per month** and is intended for any who cannot otherwise afford full dues. Choose this option if you need it!
 
 ## Getting Started with Membership
 We've tried to make the process for membership as straightforward as possible. If you have any questions throughout the process, please [reach out to us](./contact).
@@ -27,9 +27,9 @@ We've tried to make the process for membership as straightforward as possible. I
 
 3. **Sign up for an Orientation:** <a href={urlConstants.bookWhen} data-goatcounter-click={urlConstants.bookWhen}>Member applicant orientations</a> are 1st and 3rd Tuesdays at 7PM every month. If this time will not work, [get in touch](./contact).
 
-4. **Application Review** Our Board and Members review new applications as they are received. We will reach out with next steps and any questions. 
+4. **Application Review** Our Board and Members review new applications as they are received. We will reach out with next steps and any questions.
 
-5. **Start Paying Dues**. Membership dues are accepted through [Open Collective](https://opencollective.com/sequoia-fabrica/contribute/sponsor-68571). If this does not work for you, contact us.
+5. **Start Paying Dues**. Membership dues are accepted through <a href={urlConstants.bookWhenMembership} data-goatcounter-click={urlConstants.bookWhenMembership}>BookWhen</a>. *Do not start paying dues before completing the steps above!*
 
 6. **Become a Part of the Community:** Once you're a member, you will be provided a key code, have access to the space to use as you please as long as it doesn't go against our community rules. Start using the space, join [a grove](./faq#what_is_a_grove), help us maintain our workshop.
 
